# TrainyCorn

./: .gitignore  LICENSE  README.md  app.py  combos.py  justfile  pyproject.toml
data/: moves.json
