[project]
name = "trainycorn"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10.15"
dependencies = [
    "kokoro>=0.7.3",
    "mediapipe>=0.10.20",
    "misaki>=0.7.3",
    "opencv-python>=4.11.0.86",
    "phonemizer>=3.3.0",
    "pip>=25.0",
    "pydub>=0.25.1",
    "soundfile>=0.13.1",
    "typer>=0.15.1",
]
